static/less/shared-components.less
/* ... */
.event-list {
  border: 1px solid @trim;
  overflow-x: scroll;
  border-radius: 3px;

  .table {
    border: 0;
    margin-bottom: 0;

    & > thead > tr > th,
    & > tbody > tr > td {
      padding: 10px 15px;
    }

    h5 {
      margin-bottom: 0;
      font-size: 16px;

      small {
        margin-top: 5px;
        display: block;
        color: @gray;
      }
    }

    th {
      text-transform: uppercase;
      font-size: 14px;
      color: #95899f;
    }

    th,
    td {
      white-space: nowrap;
    }

    .table-user-info {
      padding-left: 54px !important;
      position: relative;

      .avatar {
        top: 50%;
        margin-top: -12px;
      }

      p {
        margin-bottom: 0;
      }
    }

    time {
      white-space: nowrap;
    }
  }
}

/**
* Avatar
* ============================================================================
*/

.avatar {
  width: 20px;
  height: 20px;
  vertical-align: middle;
  position: relative;
  display: inline-block;
}

.org-avatar {
  width: 30px;
  height: 30px;
  background: @red url(sentry-images/sentry-avatar.png);
  background-size: cover;
  border-radius: 3px;
}

/**
* Loading Indicator
* ============================================================================
*/

@loader-size: 64px;

.loading {
  margin: 6em auto;
  position: relative;

  &.overlay {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: rgba(255, 255, 255, 0.8);
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0;

    &.dark {
      background-color: rgba(0, 0, 0, 0.6);
    }
  }

  .loading-indicator {
    position: relative;
    border: 6px solid @white-darkest;
    border-left-color: @purple;
    -webkit-animation: loading 0.5s infinite linear;
    animation: loading 0.55s infinite linear;
    margin: 0 auto;
  }

  .loading-indicator,
  .loading-indicator:after {
    border-radius: 50%;
    width: @loader-size;
    height: @loader-size;
  }

  .loading-message {
    margin-top: 20px;
    text-align: center;
  }
}

.theme-dark .loading .loading-indicator {
  // theme.tokens.background.primary
  background: #241D2A;
}

@-webkit-keyframes loading {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes loading {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

// mini

.loading.mini {
  margin: 4px 0;
  font-size: 13px;
  height: 24px;
  width: 24px;

  .loading-indicator {
    margin: 0;
    border-radius: 50%;
    width: 24px;
    height: 24px;
    border-width: 2px;
    position: absolute;
    left: 0;
    top: 0;

    &.relative {
      position: relative;
      left: auto;
      top: auto;
    }
  }

  .loading-message {
    padding-left: 30px;
    margin-top: 1px;
    display: inline-block;
  }
}

// Spinning logo icon loader
.loading.triangle {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 500px;
  margin-top: -200px;
  margin-left: -250px;

  // Nerf the styles of other loading indicators
  .loading-indicator {
    height: 150px;
    width: 150px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: #fff;

    animation: none;
    -webkit-animation: none;
    border: 0;
    overflow: hidden;
    border-radius: 50%;
  }

  @media (max-width: 500px) {
    width: 90vw;
    margin-left: -45vw;

    .loading-message {
      word-wrap: break-word;
      overflow-wrap: break-word;
      padding: 0 1rem;
      box-sizing: border-box;
    }
  }
}

// UI2 loader
.splash-loader {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  margin: 0;

  .loading-indicator {
    height: 256px;
    width: 256px;
    display: flex;
    align-items: center;
    justify-content: center;

    animation: none;
    border: 0;
    overflow: hidden;
    border-radius: 0;
  }

  .loading-message {
    font-family: @font-family-code;
  }
}
.splash-loader code {
  margin: 0;
  padding: 0;
  border: none;
  padding-inline: 0.3ch;
  margin-inline: -0.15ch;
  border-radius: 2px;
  text-box-edge: text text;
  text-box-trim: trim-both;

  color: #C8007E;
  background: color-mix(in oklab, currentColor, transparent 92%);
}
.theme-dark .splash-loader code {
  color: #EA95B9;
}
.splash-loader small {
  color: #6A6772;
}
.theme-dark .splash-loader small {
  color: #B5B0BD;
}

.theme-dark .loading.triangle .loading-indicator {
  filter: invert(100%);
  opacity: 0.8;
}
body.theme-system {
  @media (prefers-color-scheme: dark) {
    .loading.triangle .loading-indicator {
      filter: invert(100%);
      opacity: 0.8;
    }
  }
}
/* ... */

